# cwebapi

./: .gitignore  .gitmodules  CMakeLists.txt
api/: CMakeLists.txt  main.cpp
client/: CMakeLists.txt
client/src/: App.js
ssrender/: CMakeLists.txt
ssrender/pages/: 404.html  index.html  roll.html
ssrender/src/: cookies.hpp  errors.cpp  errors.hpp  index.cpp  index.hpp  main.cpp  roll.cpp  roll.hpp  router.cpp  router.hpp  server.cpp  server.hpp
tools/: CMakeLists.txt  stdoutwrapper.c  webtemplate.l
